# mlops-training-project

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.api  Makefile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml  requirements.txt  service_config.yaml
.dvc/: config
.github/workflows/: ci.yml
dags/: ml_pipeline.py
doc/: metrics.md
grafana/provisioning/alerting/: rules.yaml
grafana/provisioning/notifiers/: telegram.yaml
prometheus/: prometheus.yml
scripts/: query_api.py
src/api/: config.py  main.py
src/data/: data_download.py  data_prepare.py  dataloader.py
src/models/: model.py  model_train.py  train.py
