[project]
name = "mlops-training-project"
version = "0.1.0"
description = "Simple repository of training ASR model for MLOPS cource in ITMO AITH"
authors = [
    {name = "Alexey Laletin", email = "alex.klark.laletin@yandex.com"}
]
requires-python = ">= 3.11"
readme = "README.md"
dependencies = [
    "apache-airflow==2.7.1",
    "click>=8.1.8",
    "dvc>=3.59.1",
    "dvclive>=3.48.2",
    "kaggle>=1.7.4.2",
    "lightning>=2.5.1.post0",
    "mlflow>=2.22.0",
    "num2words>=0.5.14",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.7",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 120
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
